# truecallerpy

./: README.md  pyproject.toml
src/truecallerpy/: cli.py
src/truecallerpy/data/: phones_list.py
