[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "truecallerpy"
version = "1.0"
description = "TruecallerPy is a Python package that provides functionalities to interact with the Truecaller API."
readme = "README.md"
license = { file = "LICENSE" }
keywords = [
    "truecallerpy",
    "truecaller",
    "search",
    "phone",
    "number",
    "phonenumber",
    "information",
    "mobile",
]
authors = [{ name = "Aryan", email = "208702813+aryanski@users.noreply.github.com"}]
maintainers = [{ name = "Aryan", email = "208702813+aryanski@users.noreply.github.com" }]

classifiers = [
    "Topic :: Utilities",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

dependencies = ["httpx", "phonenumbers", "questionary", "colorama"]

[project.urls]
Homepage = "https://github.com/aryanski/truecallerpy"
Documentation = "https://github.com/aryanski/truecallerpy"
Repository = "https://github.com/aryanski/truecallerpy"
Changelog = "https://github.com/aryanski/truecallerpy"
"Bug Tracker" = "https://github.com/aryanski/truecallerpy/issues"

[project.scripts]
truecallerpy = "truecallerpy.cli:main"